<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shpp.sv.notificationservice.MainActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartServiceLabel"
        android:id="@+id/btnStartService"
        android:layout_above="@+id/btnStopService"
        android:layout_alignParentStart="true"
        android:onClick="onClickStartService" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStopServiceLabel"
        android:id="@+id/btnStopService"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="oncCLickStopService" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNotification"
        android:layout_marginTop="45dp"
        android:hint="@string/edtNotificatonHint"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/edtInterval"
        android:layout_toEndOf="@+id/tvNotifLabel" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnChangeTextLabel"
        android:id="@+id/btnChangeText"
        android:onClick="onClickChangeText"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/edtNotification"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtInterval"
        android:layout_below="@+id/edtNotification"
        android:layout_alignEnd="@+id/btnChangeText"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/tvNotifLabel"
        android:numeric="integer"
        android:hint="@string/edtIntervalHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvIntervalLabelText"
        android:id="@+id/tvIntervalLabel"
        android:textStyle="italic"
        android:layout_alignBaseline="@+id/edtInterval"
        android:layout_alignBottom="@+id/edtInterval"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNotilLabelText"
        android:id="@+id/tvNotifLabel"
        android:layout_alignBaseline="@+id/edtNotification"
        android:layout_alignBottom="@+id/edtNotification"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

</RelativeLayout>
